# mc_broker_api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codecov.yml
tests/: test_zerodha_api.py
zerodha_api/: __init__.py  config.default.yaml  settings.py
zerodha_api/amqp/: main.py
zerodha_api/connect/: main.py
zerodha_api/ticker/: main.py
zerodha_api/utils/: datetime.py  requests.py
